--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /WebApplication2/nbproject/private/
 /Saludo1/WebApplication1/build/
 /WebApplication2/build/
+/PruebaPersonas/nbproject/private/
+/PruebaPersonas/build/
